--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -40,7 +40,7 @@
                 <h3>Recent Arrival requests</h3>
             </div>
             <div class="col-md-2">
-                <button class="btn btn-info float-right text-white">View all</button>
+                <a href=""></a><button class="btn btn-info float-right text-white">View all</button>
             </div>
         </div>
 
